--- a/portfolio.css
+++ b/portfolio.css
@@ -86,3 +86,21 @@
     border: 2px solid #2a2b2a;
     box-sizing: border-box;
 }
+.navbuttons a {
+    text-decoration: none;
+    color: #2a2b2a;
+    font-size: 20px;
+    text-decoration: underline #b1423f00;
+    transition: text-decoration .3s;
+
+}
+.navbuttons a:hover {
+
+    text-decoration-color: #b1423fff;
+
+}
+.navbuttons {
+    display: flex;
+    width: 30%;
+    justify-content: space-between;
+}
