--- a/index.css
+++ b/index.css
@@ -27,10 +27,10 @@ background: linear-gradient(180deg, rgba(112,202,209,1) 35%, rgba(212,212,212,1)
 .portfolio {
     text-decoration: none;
     color: #2a2b2a;
-    font-size: 60px;
+    font-size: 45px;
     text-decoration: underline #b1423f00;
     transition: text-decoration .3s;
-    margin: 25px;
+
 }
 .portfolio:hover {
 
@@ -60,4 +60,42 @@ background: linear-gradient(180deg, rgba(112,202,209,1) 35%, rgba(212,212,212,1)
     color: #2a2b2a;
     font-size: 20px;
     margin-bottom: 60px;
+}
+.viewmyworkhere {
+    text-decoration: none;
+    color: #2a2b2a;
+    font-size: 60px;
+
+   
+    margin: 25px;
+
+}
+.navigation {
+    display: flex;
+    width: 45%;
+flex-direction: column;
+
+}
+.paragraphcontainer {
+    width: 35%;
+}
+.middle {
+    margin: 20px 0;
+}
+.services
+{ 
+    height: 98vh;
+}
+.navbuttons a {
+    text-decoration: none;
+    color: #2a2b2a;
+    font-size: 40px;
+    text-decoration: underline #b1423f00;
+    transition: text-decoration .3s;
+
+}
+.navbuttons a:hover {
+
+    text-decoration-color: #b1423fff;
+
 }
