--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ background: linear-gradient(180deg, rgba(112,202,209,1) 35%, rgba(212,212,212,1)
 }
 .header {
     color: #b1423f;
-    font-size: 150px;
+    font-size: 100px;
    
 }
 .subheader {
@@ -89,7 +89,7 @@ flex-direction: column;
 .navbuttons a {
     text-decoration: none;
     color: #2a2b2a;
-    font-size: 40px;
+    font-size: 20px;
     text-decoration: underline #b1423f00;
     transition: text-decoration .3s;
 
@@ -98,4 +98,20 @@ flex-direction: column;
 
     text-decoration-color: #b1423fff;
 
+}
+.indexclip {
+    width: 45%;
+    border: 10px solid #b1423fff;
+}
+.homenav {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.logo {
+    width: 250px;
+}
+.navbuttons {
+    display: flex;
+    flex-direction: column;
 }
